Save point which mainly includes code to access backend

--- a/osrs-dashboard-website/src/app/display-card/display-card.component.html
+++ b/osrs-dashboard-website/src/app/display-card/display-card.component.html
@@ -1,3 +1,8 @@
-<div>
-    <img [src]="image">
+<div class="display_info_container">
+    <ng-container *ngIf="itemInfoData">
+        <h3>{{ itemInfoData.name }}</h3>
+        <p>ID: {{ itemInfoData.id }}</p>
+        <p>Description: {{ itemInfoData.description }}</p>
+        <img [src]="itemInfoData.icon">
+    </ng-container>
 </div>
