--- a/osrs-dashboard-website/src/app/display-card/display-card.component.scss
+++ b/osrs-dashboard-website/src/app/display-card/display-card.component.scss
@@ -1,4 +1,8 @@
 div {
     width: fit-content;
     height: fit-content;
+
+    &.display_info_container {
+        color: #8cabe6 !important;
+    }
 }
