Updates to Item Service and Display Section component.
Small updates to accept a list of Item data and present a display card for each item,

--- a/osrs-dashboard-website/src/app/display-section/display-section.component.html
+++ b/osrs-dashboard-website/src/app/display-section/display-section.component.html
@@ -4,5 +4,10 @@
         <input [(ngModel)]="searchTerm" name="search" placeholder="Search..." />
         <button (click)="onItemSearch()">Search</button>
     </section>
-    <app-display-card [itemInfoData]="itemInfo"></app-display-card>
+    <section *ngIf="itemInfoList && itemInfoList.length > 0" class="results_section">
+        <app-display-card
+          *ngFor="let item of itemInfoList"
+          [itemInfoData]="item">
+        </app-display-card>
+      </section>
 </div>
