--- a/osrs-dashboard-website/src/styles.scss
+++ b/osrs-dashboard-website/src/styles.scss
@@ -1,2 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'material-icons/iconfont/material-icons.css';
+
+body {
+    margin: 0;
+    padding: 0;
+    background-color: #172136;
+    min-height: 100vh;
+  }
