Updates to Item Component Screen.

--- a/osrs-dashboard-website/src/app/dashboard/dashboard.component.scss
+++ b/osrs-dashboard-website/src/app/dashboard/dashboard.component.scss
@@ -34,10 +34,10 @@
     }
   
     .tab-content {
-        padding: 1.5rem;
-        border: 1px solid #e0e0e0;
+        padding: 1rem;
+        border: 2px solid #596e96;;
         border-radius: 0.75rem;
-        background-color: #ffffff;
+        background-color: #313e59;
         box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
     }
 }
