--- a/osrs-dashboard-website/src/app/items/items.component.html
+++ b/osrs-dashboard-website/src/app/items/items.component.html
@@ -1,13 +1,13 @@
 <div class="item_component_foundation">
     <form (ngSubmit)="onItemSearch()" #searchForm="ngForm" class="search_box">
-        <span>Item Search:</span>
+        <span class="search_prompt">Item Search:</span>
         <input
             [(ngModel)]="searchTerm"
             name="search"
             required
             placeholder="Search..."
         />
-        <button type="submit">Search</button>
+        <app-button type="submit" buttonText="Search"></app-button>
     </form>
     <section *ngIf="itemInfoList && itemInfoList.length > 0" class="results_section">
         <app-item-display-card
