--- a/osrs-dashboard-website/src/app/button/button.component.scss
+++ b/osrs-dashboard-website/src/app/button/button.component.scss
@@ -2,15 +2,15 @@
     width: min-content;
     height: fit-content;
     padding: 5px;
-    margin: 5px;
     display: flex;       // Enable flexbox inside the button
     justify-content: center; // Center content horizontally inside button
     align-items: center;     // Center content vertically inside button
     border-color: #3f5073;
     border-width: 2px;
     border-style: solid;
-    background-color: #313e59;
-    color: #8cabe6;
+    border-radius: 10px;
+    color: #313e59;
+    background-color: #bdd9f2;
 }
 
 i.material-icons {
